Fix scale blurriness issue
On :hover images were blurry. To fix, I made the original image a few
pixels smaller and scaled up to the original image size.

:boom:

--- a/JavaScript/Sounds Project/jingaby.css
+++ b/JavaScript/Sounds Project/jingaby.css
@@ -182,8 +182,13 @@ h1{
 	border-radius: 15px;
   cursor: pointer;
   background: #FFF;
+	transform: scale(0.98);
+	transition: transform .3s;
+	
 }
 .tile:hover {
-	box-shadow: 0 0 12px rgba(0,0,0,0.2)
+	box-shadow: 0 0 12px rgba(0,0,0,0.3);
+	transform: scale(1.0);
+	
 }
 
